[gd_scene load_steps=19 format=2]

[ext_resource path="res://scripts/Pipe.gd" type="Script" id=1]
[ext_resource path="res://art/pipe_horizontal.png" type="Texture" id=2]
[ext_resource path="res://art/pip_down_left.png" type="Texture" id=3]
[ext_resource path="res://art/pipe_vertical.png" type="Texture" id=4]
[ext_resource path="res://art/pipe_left_down_right.png" type="Texture" id=5]
[ext_resource path="res://art/pipe_up_left_down.png" type="Texture" id=6]
[ext_resource path="res://art/pipe_up_right.png" type="Texture" id=7]
[ext_resource path="res://art/pip_up_left.png" type="Texture" id=8]
[ext_resource path="res://art/pip_down_right.png" type="Texture" id=9]
[ext_resource path="res://art/pipe_all_dir.png" type="Texture" id=10]
[ext_resource path="res://art/pipe_up_right_down.png" type="Texture" id=11]
[ext_resource path="res://art/pipe_left_up_right.png" type="Texture" id=12]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 12 ), ExtResource( 5 ), ExtResource( 11 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 1 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 12, 6.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12, 6.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 7, 12 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 7, 12 )

[node name="Pipe" type="Area2D"]
script = ExtResource( 1 )

[node name="pipe" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
speed_scale = 0.0

[node name="path" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="up" type="Area2D" parent="."]
position = Vector2( 0, -30.5 )

[node name="up_col" type="CollisionShape2D" parent="up"]
shape = SubResource( 7 )

[node name="down" type="Area2D" parent="."]
position = Vector2( 0, 30.5 )

[node name="down_col" type="CollisionShape2D" parent="down"]
shape = SubResource( 4 )

[node name="left" type="Area2D" parent="."]
position = Vector2( -31, 0 )

[node name="left_col" type="CollisionShape2D" parent="left"]
shape = SubResource( 5 )

[node name="right" type="Area2D" parent="."]
position = Vector2( 31, 0 )

[node name="rigth_col" type="CollisionShape2D" parent="right"]
shape = SubResource( 6 )

[connection signal="area_entered" from="." to="." method="_on_Pipe_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Pipe_area_exited"]
[connection signal="area_entered" from="up" to="." method="_on_up_area_entered"]
[connection signal="area_exited" from="up" to="." method="_on_up_area_exited"]
[connection signal="area_entered" from="down" to="." method="_on_down_area_entered"]
[connection signal="area_exited" from="down" to="." method="_on_down_area_exited"]
[connection signal="area_entered" from="left" to="." method="_on_left_area_entered"]
[connection signal="area_exited" from="left" to="." method="_on_left_area_exited"]
[connection signal="area_entered" from="right" to="." method="_on_right_area_entered"]
[connection signal="area_exited" from="right" to="." method="_on_right_area_exited"]
